Added basic css and changed some feature of app

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="./src/index.css" />
     </head>
     <body>
+        <h1>Todo's List</h1>
         <div id="root"></div>
         <!-- <button id="trigger">Trigger</button> -->
         <script src="./src/app.js"></script>
